# CMake_Skeleton

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
Binary/: CMakeLists.txt  main.cpp
FooBar/: CMakeLists.txt
FooBar/foo/: CMakeLists.txt  exec.cpp  exec.h
Qt/: CMakeLists.txt
Qt/src/: testwidget.cpp
Utils/: CMakeLists.txt
Utils/build-tests-Qt_6_6_1_for_macOS-Debug/: CMakeCache.txt.prev
Utils/tests/: CMakeLists.txt  unit_tests.cpp
include/: Function.h
int/: CMakeLists.txt  main.cpp
